<resources>
    <string name="app_name">ExpressPOS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="remembermetext">Remember me</string>
    <string name="action_submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="scan_product">Scan Product</string>
    <string name="create_new_product">Create New Product</string>
    <string name="select_from_list">Select from list</string>


    <string name="hello_blank_fragment">BLANK FRAGMENT</string>

    <string name="product_name">Product Name</string>
    <string name="product_number">Product Number</string>
    <string name="upc">UPC</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>

    <string name="settings_category_pos">POS Settings</string>
    <string name="settings_category_inventory">Inventory Settings</string>

    <string name="tax_value">Tax Value</string>
    <string name="tax_value_description">Set tax value in your area</string>

    <string name="show_pick_list_button">Show list button</string>
    <string name="show_pick_list_button_description">Show/Hide select from list button on POS</string>

    <string name="allow_editing">Allow Editing</string>
    <string name="allow_editing_description">Allow to edit existion products in inventory</string>

    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Repeat Password</string>
    <string name="create_account">Create Account</string>


</resources>
