<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    tools:context="com.dev.lakik.expresspos.Fragments.POSFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/inventory_fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_margin="12dp"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorPrimary"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="@color/color_text_icon"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66000000"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_scan_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_barcode"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_colorRipple="#99FFFFFF"
            fab:fab_label="@string/scan_product"
            fab:fab_size="mini" />
        />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_select_from_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list_black_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_colorRipple="#99FFFFFF"
            fab:fab_label="@string/select_from_list"
            fab:fab_size="mini" />
        />

    </com.github.clans.fab.FloatingActionMenu>
</FrameLayout>
